# jllvm

./: .hgignore  ProjectHome.md  README  build.xml
src/org/jllvm/: LLVMAddInstruction.java  LLVMAllocationInstruction.java  LLVMArgument.java  LLVMArithmeticInstruction.java  LLVMArrayType.java  LLVMBasicBlock.java  LLVMBinaryBitwiseInstruction.java  LLVMBitCast.java  LLVMBitWriter.java  LLVMBranchInstruction.java  LLVMCallInstruction.java  LLVMCastInstruction.java  LLVMComparisonInstruction.java  LLVMConstant.java  LLVMConstantAggregate.java  LLVMConstantArray.java  LLVMConstantBoolean.java  LLVMConstantExpression.java  LLVMConstantInlineASM.java  LLVMConstantInteger.java  LLVMConstantPointer.java  LLVMConstantReal.java  LLVMConstantString.java  LLVMConstantStruct.java  LLVMConstantVector.java  LLVMContext.java  LLVMDivideInstruction.java  LLVMDoubleType.java  LLVMExecutionEngine.java  LLVMExtendCast.java  LLVMExtractElementInstruction.java  LLVMExtractValueInstruction.java  LLVMFP128Type.java  LLVMFloatComparison.java  LLVMFloatToIntegerCast.java  LLVMFloatType.java  LLVMFreeInstruction.java  LLVMFunction.java  LLVMFunctionPassManager.java  LLVMFunctionType.java  (+61 more)
src/org/jllvm/bindings/: Analysis.i  Analysis.java  AnalysisJNI.java  Analysis_wrap.c  BitReader.i  BitReader.java  BitReaderJNI.java  BitReader_wrap.c  BitWriter.i  BitWriter.java  BitWriterJNI.java  BitWriter_wrap.c  CMakeCache.txt  CMakeLists.txt  Core.i  Core.java  CoreJNI.java  Core_wrap.c  Disassembler.i  Disassembler.java  DisassemblerConstants.java  DisassemblerJNI.java  Disassembler_wrap.c  EDAssemblySyntax_t.java  EnhancedDisassembly.i  EnhancedDisassembly.java  EnhancedDisassemblyConstants.java  EnhancedDisassemblyJNI.java  EnhancedDisassembly_wrap.c  ExecutionEngine.i  ExecutionEngine.java  ExecutionEngineJNI.java  ExecutionEngine_wrap.c  IPO.i  IPO.java  IPOJNI.java  IPO_wrap.c  Initialization.i  Initialization.java  InitializationJNI.java  (+126 more)
src/org/jllvm/bindings/Transforms/: IPO.i  IPO.java  IPOJNI.java  IPO_wrap.c  PassManagerBuilder.i  PassManagerBuilder.java  PassManagerBuilderJNI.java  PassManagerBuilder_wrap.c  SWIGTYPE_p_LLVMOpaquePassManagerBuilder.java  Scalar.i  Scalar.java  ScalarJNI.java  Scalar_wrap.c  Vectorize.i  Vectorize.java  VectorizeJNI.java  Vectorize_wrap.c
src/org/jllvm/bindings/llvm_cmake/: LLVMConfig.cmake
